feat: 添加了JWT权限验证,从上下文获取当前线程登录用户信息等

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>team-common-rpc</module>
         <module>team-common-service</module>
         <module>team-common-api</module>
+        <module>team-common-jwt-starter</module>
     </modules>
 
     <dependencies>
